# actionable-segmentation-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  catalog-info.yaml  mkdocs.yml  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
docs/: ARCHITECTURE.md  CLV_PREDICTION_PLAN.md  changelog.md  contributing.md  index.md  tags.md
docs/adrs/: 001-pydantic-v2-models.md  002-kmeans-clustering.md  003-mock-llm-support.md  004-robustness-first.md  005-functional-core.md  _template.md  index.md
docs/architecture/: data-flow.md  exceptions.md  index.md  modules.md  overview.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/guide/: export.md  index.md  pipeline.md  segments.md  visualizations.md
docs/includes/: abbreviations.md
docs/reference/: data.md  features.md  index.md  llm.md  pipeline.md  reporting.md  segmentation.md
docs/runbooks/: index.md  performance.md  troubleshooting.md
docs/stylesheets/: extra.css
examples/: README.md  bigquery_config_example.py  custom_config.py  export_results.py  load_local_data.py  quick_start.py  visualizations.py
notebooks/: 01_quick_start_demo.ipynb  02_custom_configuration.ipynb  02_local_data_pipeline.ipynb  03_custom_schema_config.ipynb  03_visualization_gallery.ipynb
scripts/: collect_trait_feedback.py  demo_trait_discovery.py  generate_essay.py  run_local_pipeline.py  train_clv_model.py
src/: __init__.py  exceptions.py  pipeline.py
src/analysis/: __init__.py  integrated_analysis.py  trait_discovery.py  trait_explainer.py  trait_feedback.py
src/data/: __init__.py  bq_client.py  field_mapping.py  joiner.py  local_loader.py  schemas.py  synthetic_generator.py
src/data/bigquery/: __init__.py  adapter.py  config.py  sample_extractor.py  schema_discovery.py
src/essays/: __init__.py  base.py  data_queries.py  narratives.py  overrides.py
src/essays/charts/: __init__.py  funnel.py  radar.py  sankey.py  scatter.py  timeline.py
src/essays/renderers/: __init__.py  components.py  html.py  pudding_html.py
src/essays/sections/: __init__.py  champion_fragility.py  churn_prediction.py  loyalty_journey.py  new_customer_quality.py  segment_robustness.py  trait_insights.py  whitespace_opportunities.py
src/essays/viz_catalog/: __init__.py  matcher.py
src/features/: __init__.py  aggregators.py  profile_builder.py  trait_extractors.py
src/features/clv/: __init__.py  explainer.py  features.py  predictor.py  training.py
src/llm/: __init__.py  actionability_filter.py  intent_templates.py  segment_explainer.py
src/reporting/: __init__.py  segment_reporter.py  visuals.py
src/segmentation/: __init__.py  clusterer.py  hypothesis_generator.py  segment_validator.py  sensitivity.py  whitespace.py
src/validation/: __init__.py  advanced_analytics.py  sensitivity_analyzer.py
static/css/: essay.css
static/js/: essay.js
static/js/charts/: funnel.js  radar.js  sankey.js  scatter.js  timeline.js
tests/: __init__.py  conftest.py  test_aggregators.py  test_bigquery_adapter.py  test_bigquery_config.py  test_clusterer.py  test_clv_data_integrity.py  test_clv_explainer.py  test_clv_features.py  test_clv_integration.py  test_clv_predictor.py  test_clv_training.py  test_concurrency.py  test_data_integrity.py  test_end_to_end.py  test_essay_data_integrity.py  test_essay_e2e.py  test_essays.py  test_field_mapping.py  test_joiner.py  test_llm_integration.py  test_local_loader.py  test_pipeline.py  test_profile_builder.py  test_profiles.py  test_reporting.py  test_sample_extractor.py  test_schema_discovery.py  test_schemas.py  test_segment_viability.py  test_sensitivity.py  test_synthetic_generator.py  test_trait_discovery.py  test_trait_explainer.py  test_trait_extractors.py  test_trait_feedback.py
